app/assets/stylesheets/mgetit/_fulltext.scss
/*
  Fulltext sources
*/

.fulltext-sources {
  margin: 0;
  list-style: none;

  li {
    padding: 0;
  }
}

.fulltext-link {
  margin: 0;
  margin-right: 0.5rem;
}

.fulltext-source {
  margin-right: 0.5rem;
  line-height: 1.5 !important;
}

.show-more {
  display: inline-block;
  margin-top: 1.5rem;
}


/*
  Fulltext-wrapper
*/

.fulltext-wrapper {
  display: flex;
}

.fulltext-links {
  margin-right: 0.5rem;
}

.fulltext-source,
.fulltext-date {
  display: block;
}

.fulltext-read-article {
  white-space: nowrap
}

.fulltext-source-and-date {
  vertical-align: middle;
}

.fulltext-date {
  color: $grey-3;
  font-size: 0.85rem;
}

@media (max-width: 32rem) {
  .fulltext-wrapper {
    display: block;
  }

  .fulltext-links {
    margin-bottom: 0.25rem;
    margin-right: 0;
    width: 100%;

    .button {
      width: 100%;
      text-align: center;
    }
  }
}

.citation-label {
  font-weight: 600;
}

